--- a/src/style.css
+++ b/src/style.css
@@ -1,24 +1,65 @@
+* {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 .main_container {
   display: grid;
   grid-template-columns: 60px 1fr;
+  grid-template-rows: 32px 1fr;
 }
 
-.toolbar {
+.top_toolbar {
+  grid-column: 1 / 3;
+  grid-row: 1;
+  margin: 0;
+  padding: 0;
+}
+
+.top_toolbar {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #d9d9d9;
+}
+
+.top_toolbar li {
+  float: left;
+}
+
+.top_toolbar li a {
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 7px 8px;
+  text-decoration: none;
+}
+
+.top_toolbar li a:hover:not(.active) {
+  background-color: #bfbfbf;
+}
+
+.left_toolbar {
   padding-left: 5px;
   margin: 0;
+  grid-row: 2;
 }
 
-.toolbar .action {
+.left_toolbar .action {
   width: 48px;
   height: 48px;
   margin-top: 10px;
   list-style-type: none;
 }
 
-.toolbar .action.create_table {
+.left_toolbar .action.create_table {
   background: url(../asset/image/icon_create_table_48x48.png) no-repeat;
 }
 
-.toolbar .action.create_relation {
+.left_toolbar .action.create_relation {
   background: url(../asset/image/icon_create_relation_48x48.png) no-repeat;
+}
+
+.designer {
+  grid-row: 2;
 }
