--- a/src/style.css
+++ b/src/style.css
@@ -31,34 +31,11 @@
   background: url(../asset/image/icon_create_relation_48x48.png) no-repeat;
 }
 
-.designer {
+db-designer {
   grid-row: 2;
 }
 
-.top_toolbar {
+menu-bar {
   grid-column: 1 / 3;
   grid-row: 1;
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #d9d9d9;
-}
-
-.top_toolbar li {
-  float: left;
-}
-
-.top_toolbar li a {
-  display: block;
-  color: black;
-  text-align: center;
-  padding: 7px 8px;
-  text-decoration: none;
-}
-
-.top_toolbar > li a:hover:not(.active) {
-  background-color: #bfbfbf;
 }
