dialog styling fix, table move listener

--- a/src/style.css
+++ b/src/style.css
@@ -49,6 +49,16 @@ dialog div, dialog menu {
   margin-top: 40px;
 }
 
+dialog menu {
+  display: flex;
+  justify-content: center;
+  padding-left: 0;
+}
+
+dialog menu button:not(:first-child) {
+  margin-left: 10px;
+}
+
 dialog table th {
   text-align: left;
 }
