added css and html loaders. improved style loading

--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,10 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
+body {
+  margin: 0;
+}
+
 .main_container {
   display: grid;
   grid-template-columns: 60px 1fr;
