--- a/src/renderer/index.hbs
+++ b/src/renderer/index.hbs
@@ -7,7 +7,14 @@
   <meta charset="UTF-8">
   <meta name="web" content="yes">
 
-  <script src="main.js"></script>
+  <script>
+    <% if (htmlWebpackPlugin.options.nodeModules) { %>
+      require('module').globalPaths.push(
+        '<%= htmlWebpackPlugin.options.nodeModules %>'.replace(/\\/g, '\\\\'),
+      )
+    <% } %>
+    require('source-map-support/source-map-support.js').install()
+  </script>
 
 </head>
 
