--- a/src/renderer/index.ejs
+++ b/src/renderer/index.ejs
@@ -7,14 +7,13 @@
   <meta charset="UTF-8">
   <meta name="web" content="yes">
 
-  <script>
-    <% if (htmlWebpackPlugin.options.nodeModules) { %>
-      require('module').globalPaths.push(
-        '<%= htmlWebpackPlugin.options.nodeModules %>'.replace(/\\/g, '\\\\'),
-      )
-    <% } %>
-    require('source-map-support/source-map-support.js').install()
-  </script>
+  <% if (htmlWebpackPlugin.options.nodeModules) { %>
+    <!-- Add `node_modules/` to global paths so `require` works properly in development -->
+    <script>
+      require('module').globalPaths.push('<%= htmlWebpackPlugin.options.nodeModules.replace(/\\/g, '\\\\') %>');
+      require('source-map-support/source-map-support.js').install();
+    </script>
+  <% } %>
 
 </head>
 
