--- a/src/renderer/component/db-connection-dialog/style.css
+++ b/src/renderer/component/db-connection-dialog/style.css
@@ -3,3 +3,14 @@ label {
   width: 140px;
   text-align: right;
 }
+
+.block {
+  margin-bottom: 10px;
+}
+
+menu {
+  margin: auto;
+  padding: 0;
+  width: fit-content;
+  margin-top: 15px;
+}
