--- a/src/renderer/index.ejs
+++ b/src/renderer/index.ejs
@@ -12,6 +12,7 @@
 <body>
   <input type="file" id="file_open" style="display:none" accept="application/json" />
   <table-dialog></table-dialog>
+  <choose-db-dialog></choose-db-dialog>
   <% if (IS_ELECTRON) { %>
   <db-connection-dialog></db-connection-dialog>
   <% } %>
