--- a/src/renderer/component/choose-db-dialog/template.html
+++ b/src/renderer/component/choose-db-dialog/template.html
@@ -1,8 +1,12 @@
 <custom-dialog>
-  <select>
-    <option value="psql">PostgreSQL</option>
-  </select>
+  <label>
+    Please choose the database type:
+    <select>
+      <option value="psql">PostgreSQL</option>
+    </select>
+  </label>
   <menu>
-    <button id="ok" type="button">Cancel</button>
+    <button id="ok" type="button">Ok</button>
+    <button id="cancel" type="button">Cancel</button>
   </menu>
 </custom-dialog>
