--- a/src/renderer/component/welcome-dialog/template.html
+++ b/src/renderer/component/welcome-dialog/template.html
@@ -1,6 +1,7 @@
+<choose-db-dialog></choose-db-dialog>
 <custom-dialog>
   <div>
-    <a id="new-file"><h3>New File</h3></a>
-    <a id="open-file"><h3>Open File</h3></a>
+    <h4 class="operation" id="new-file">New File</h4>
+    <h4 class="operation" id="open-file">Open File</h4>
   </div>
 </custom-dialog>
