added support for web

--- a/src/renderer/component/welcome-dialog/template.html
+++ b/src/renderer/component/welcome-dialog/template.html
@@ -1,4 +1,5 @@
 <choose-db-dialog></choose-db-dialog>
+<input type="file" id="file_open" style="display:none" accept="application/json" />
 <custom-dialog>
   <div>
     <h4 class="operation" id="new-file">New File</h4>
