--- a/src/renderer/index.ejs
+++ b/src/renderer/index.ejs
@@ -26,7 +26,7 @@
       <li class="action create_table" title="Create Table"></li>
       <!-- <li class="action create_relation" title="Create Relation"></li> -->
     </ul>
-    <db-designer></db-designer>
+    <db-viewer></db-viewer>
   </div>
 </body>
 
