--- a/src/renderer/style.css
+++ b/src/renderer/style.css
@@ -40,7 +40,7 @@ body {
   background-image: url(./asset/image/icon_create_relation_48x48.png);
 }
 
-db-designer {
+db-viewer {
   grid-row: 2;
 }
 
