--- a/src/renderer/index.ejs
+++ b/src/renderer/index.ejs
@@ -24,7 +24,7 @@
     <% } %>
     <ul class="left_toolbar">
       <li class="action create_table" title="Create Table"></li>
-      <!-- <li class="action create_relation" title="Create Relation"></li> -->
+      <li class="action create_relation" title="Create Relation"></li>
     </ul>
     <db-viewer></db-viewer>
   </div>
