refactoring side panel WIP

--- a/src/renderer/index.ejs
+++ b/src/renderer/index.ejs
@@ -22,10 +22,11 @@
     <% if (!IS_ELECTRON) { %>
     <menu-bar></menu-bar>
     <% } %>
-    <ul class="left_toolbar">
+    <!-- <ul class="left_toolbar">
       <li class="action create_table" title="Create Table"></li>
       <li class="action create_relation" title="Create Relation"></li>
-    </ul>
+    </ul> -->
+    <side-panel></side-panel>
     <db-viewer></db-viewer>
   </div>
 </body>
