--- a/src/renderer/style.css
+++ b/src/renderer/style.css
@@ -14,7 +14,11 @@ body {
   height: 100vh;
 }
 
-.left_toolbar {
+side-panel {
+  grid-row: 2;
+}
+
+/* .left_toolbar {
   padding: 0;
   margin: 0;
   grid-row: 2;
@@ -42,7 +46,7 @@ body {
 
 .left_toolbar .action.create_relation {
   background-image: url(./asset/image/icon_create_relation_48x48.png);
-}
+} */
 
 db-viewer {
   grid-row: 2;
