added sql file importing

--- a/src/renderer/index.ejs
+++ b/src/renderer/index.ejs
@@ -14,6 +14,7 @@
   <db-connection-dialog></db-connection-dialog>
   <% } else { %>
   <input type="file" id="file_open" style="display:none" accept="application/json" />
+  <input type="file" id="db_schema_file_open" style="display:none" accept="text/plain" />
   <% } %>
   <table-dialog></table-dialog>
   <welcome-dialog></welcome-dialog>
