--- a/src/renderer/component/choose-db-dialog/template.html
+++ b/src/renderer/component/choose-db-dialog/template.html
@@ -3,6 +3,7 @@
     Please choose the database type:
     <select>
       <option value="psql">PostgreSQL</option>
+      <option value="sqlite">SQLite</option>
     </select>
   </label>
   <menu>
