fix stylings and bug fixes

--- a/src/renderer/component/welcome-dialog/template.html
+++ b/src/renderer/component/welcome-dialog/template.html
@@ -1,6 +1,6 @@
 <choose-db-dialog></choose-db-dialog>
 <input type="file" id="file_open" style="display:none" accept="application/json" />
-<input type="file" id="db_schema_file_open" style="display:none" accept="text/plain" />
+<input type="file" id="db_schema_file_open" style="display:none" />
 <custom-dialog>
   <div>
     <h4 class="operation" id="new-file">New File</h4>
