--- a/src/renderer/component/table-dialog-component/style.css
+++ b/src/renderer/component/table-dialog-component/style.css
@@ -18,4 +18,19 @@ table th {
 
 table {
   margin-top: 20px;
+  border: none;
+  border-collapse: collapse;
+}
+
+table td:first-child, table th:first-child {
+  border-left: none;
+}
+
+table td, table th {
+  border-left: 1px solid #AAA;
+  padding: 3px 5px 3px 5px;
+}
+
+table tr:hover {
+  background-color: #DDD;
 }
