--- a/src/renderer/component/custom-dialog/style.css
+++ b/src/renderer/component/custom-dialog/style.css
@@ -1,20 +1,24 @@
 .dialog {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
-  left: 0;
+  position: fixed;
+  z-index: 1;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgba(0,0,0,0.4);
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0,0,0,0);
+  
+  /* this is what centers your element in the fixed wrapper*/
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center; /* aligns on vertical for column */
+  align-items: center; /* aligns on horizontal for column */
 }
 
 .dialog-content {
-  background-color: #fefefe;
+  /* background-color: #fefefe; */
+  background-color: rgba(255, 255, 255, 1);
   margin: auto;
   padding: 20px;
   border: 1px solid #888;
-  display: table;
+  display: none;
 }
