--- a/src/renderer/index.ejs
+++ b/src/renderer/index.ejs
@@ -7,6 +7,19 @@
   <meta charset="UTF-8">
   <meta name="web" content="yes">
 
+  <% if (PRODUCTION) { %>
+    <!-- Hotjar Tracking Code for https://dbgrapher.com -->
+    <script>
+      (function(h,o,t,j,a,r){
+          h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+          h._hjSettings={hjid:1251673,hjsv:6};
+          a=o.getElementsByTagName('head')[0];
+          r=o.createElement('script');r.async=1;
+          r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+          a.appendChild(r);
+      })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+    </script>
+  <% } %>
 </head>
 
 <body>
